--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
 <script type="text/javascript" src="bower_components/angular-ui-mask/dist/mask.js"></script>
 <script src="js/app.js"></script>
 <script src="js/ngPatternController.js"></script>
+<script src="js/formService.js"></script>
+<script src="js/formDirective.js"></script>
 </body>
 </html>
