--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-resource/1.5.8/angular-resource.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-animate.min.js"></script>
 <script src="//unpkg.com/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-messages.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.3.0/ui-bootstrap-tpls.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-ui-mask/dist/mask.js"></script>
 <script src="js/app.js"></script>
 <script src="js/ngPatternController.js"></script>
 <script src="js/formService.js"></script>
 <script src="js/formDirective.js"></script>
+<script src="js/adminPanelMockupService.js"></script>
 </body>
 </html>
