angular testing bootstrap form date picker

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <title data-ng-bind="pageTitle"></title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <!--<base href="/">-->
 </head>
 <body >
+
 
 
 <div class="test" data-ng-class="{test2: true}">
